Fix for navbar display on mobile devices

--- a/style/elegance.css
+++ b/style/elegance.css
@@ -2114,7 +2114,7 @@ letter-spacing:0.1em;
 	}
 	
 	.navbar .nav{
-		display: none;
+		/* display: none; */
 	}
 }
 
